# version-hijace-for-skse

./: Cargo.toml  target.json
.github/workflows/: rust.yml
src/: lib.rs
